change sun.misc. to  java.util.Base64